--- a/mainpageStyle.css
+++ b/mainpageStyle.css
@@ -8,22 +8,29 @@
     .navbar-nav+button{
       margin-top: 1rem;
       font-size: 1.2rem;
+   
     }
     .nav-link{
       margin-top: 5px;
     }
+    #carouselExampleCaptions{
+     margin-top: 3rem;
+    }
     .nav-link:hover{
-      background-color: rgb(189, 230, 230);
+      /* background-color: rgb(255, 255, 255);
       border-radius: 10px;
       transform: scaleY(1.5);
       font-size: 1.3rem;
-      color: black;
+      color: black; */
+      text-decoration: underline;
+      text-decoration-color:rgb(109, 118, 126);
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   #logo{
     height:6rem;
-    border: 2px solid yellow;
-    border-radius: 10px;
+    width: 8rem;
+    /* border: 2px solid yellow; */
+   
   }
   }
   
@@ -32,13 +39,18 @@
     .navbar-nav{
       gap:3rem;
     }
+    #carouselExampleCaptions{
+      margin-top: 2rem;
+     }
    
     .nav-link:hover{
-      background-color: rgb(189, 230, 230);
+      /* background-color:rgb(255, 255, 255);
       border-radius: 10px;
       transform: scale(2);
       font-size: 1.3rem;
-      color: black;
+      color: black; */
+      text-decoration: underline;
+      text-decoration-color:rgb(109, 118, 126);
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   .navbar-nav+button{
@@ -47,15 +59,18 @@
   }
   .navbar-nav+button:hover{
     font-size: 1.5rem;
+    border:2px solid yellow;
   }
   #logo{
     height:8rem;
     width: 10rem;
-    border: 2px solid yellow;
-    border-radius: 20px;
+    /* border: 2px solid yellow;
+    border-radius: 20px; */
   }
   .navbar{
-    height: 6rem;
+    height: 5rem;
+    background-color:rgb(248, 250, 252);
+   
   }
   }
   
@@ -81,18 +96,22 @@
       width: 18rem; 
       margin-right: 1rem; 
   }
-  .card-body p:nth-child(2)
+  /* .card-body p:nth-child(2)
   {
     background-color: rgb(222, 221, 221)  ;
-  }
+  } */
   .women,.men{
     display: flex;
     justify-content: center;
     align-items: center;
   }
+  #men-cnt,#women-cnt,#sales,#bestseller-cnt{
+    background-color: rgb(217, 234, 253);
+  }
   /* .navbar{
     height: 5rem;
   }
+    
  
    */
   /* #logo{
@@ -112,12 +131,104 @@
 {
     height: 6rem;
     width: 10rem;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 a{
     text-decoration: none;
     color: black;
 }
 footer{
-    background-color: rgb(169, 174, 177);
+    background-color:rgb(188, 204, 220);
 }
+body{
+  padding-top: 50px;
+ 
+}
+.navbar {
+  position: fixed; 
+  top: 0;
+  width: 100%; 
+  z-index: 1030; 
+}
+#ratingreview{
+  display: flex;
+  justify-content:space-between;
+  /* text-align: center; */
+  align-items: center;
+  gap:0.5rem;
+  
+}
+#ratingreview p{
+ 
+ color: rgb(107, 102, 102);
+}
+
+/* menu item*/
+#men-item,#women-item{
+  width: 9rem;
+  padding: 10px;
+  /* margin-top: 2rem; */
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgb(248, 250, 252);
+  border: 1px solid #ccc;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  z-index: 200;
+  display: none;
+
+}
+#bestSeller{
+  width: 14rem;
+  padding: 10px;
+  /* margin-top: 2rem; */
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color:rgb(248, 250, 252);
+  border: 1px solid #ccc;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  z-index: 200;
+  display: none;
+}
+#men-item ul,#women-item ul,#bestSeller ul{
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  justify-content: center;
+  align-items: start;
+  padding: 0;
+}
+#men-item ul li,#women-item ul li{
+
+}
+#men-item{
+  left: 36%;
+  margin-top: 18.5%;
+  border: none;
+}
+#women-item{
+  left: 45%;
+  margin-top: 18.5%;
+  border: none;
+}
+#bestSeller{
+  left: 55%;
+  margin-top: 18.5%;
+  border: none;
+}
+.nav-link{
+  cursor: pointer;
+}
+/* #men{
+  border: 2px solid black;
+}
+#navbarNavAltMarkup{
+  border: 2px solid black;
+} */
+ .card:hover{
+  transform: translateY(-5px);
+ }
+ .card-body h5{
+  border-radius: 10px 0px 10px 0px;
+ }
